grid layout bug fixed

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,3 +1,5 @@
+$card-width: 200px;
+
 html {
   font-family: Roboto, sans-serif;
 }
@@ -12,26 +14,20 @@ body {
 
 .catalog {
   display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  justify-items: center;
+  grid-template-columns: repeat(4, $card-width);
+  justify-content: center;
   gap: 48px;
 
   @media (max-width: 1024px) {
-    & {
-      grid-template-columns: repeat(3, 1fr);
-    }
+    grid-template-columns: repeat(3, $card-width);
   }
 
   @media (max-width: 768px) {
-    & {
-      grid-template-columns: repeat(2, 1fr);
-    }
+    grid-template-columns: repeat(2, $card-width);
   }
   
   @media (max-width: 488px) {
-    & {
-      grid-template-columns: 1fr;
-    }
+    grid-template-columns: $card-width;
   }
 }
 
